--- a/src/org/cict/evaluation/sectionviewer/section_viewer.fxml
+++ b/src/org/cict/evaluation/sectionviewer/section_viewer.fxml
@@ -151,7 +151,7 @@
                   </AnchorPane>
                   <AnchorPane fx:id="anchor_view" prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <ScrollPane fx:id="scroll_view" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0" />
+                        <ScrollPane fx:id="scroll_view" prefHeight="200.0" prefWidth="200.0" styleClass="table" stylesheets="@../views/view.css" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0" />
                      </children>
                   </AnchorPane>
                </children>
