fixed report reclick of advising

--- a/src/org/cict/reports/advisingslip/choose-type.fxml
+++ b/src/org/cict/reports/advisingslip/choose-type.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="334.0" prefWidth="524.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" prefHeight="334.0" prefWidth="524.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="CENTER_LEFT" prefHeight="68.0" prefWidth="524.0" style="-fx-background-color: #5E9CE9;">
          <children>
