--- a/src/update/org/cict/layout/home/home.fxml
+++ b/src/update/org/cict/layout/home/home.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="application_root" prefHeight="473.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="update.org.cict.controller.home.Home">
+<AnchorPane fx:id="application_root" prefHeight="473.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button fx:id="btn_evaluation" layoutX="103.0" layoutY="155.0" mnemonicParsing="false" prefHeight="113.0" prefWidth="137.0" text="Evaluation" />
       <Button fx:id="btn_adding" layoutX="258.0" layoutY="155.0" mnemonicParsing="false" prefHeight="113.0" prefWidth="137.0" text="Adding/Changing" />
