--- a/src/update/org/cict/layout/home/home.fxml
+++ b/src/update/org/cict/layout/home/home.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane fx:id="application_root" prefHeight="473.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="btn_evaluation" layoutX="103.0" layoutY="155.0" mnemonicParsing="false" prefHeight="113.0" prefWidth="137.0" text="Evaluation" />
-      <Button fx:id="btn_adding" layoutX="258.0" layoutY="155.0" mnemonicParsing="false" prefHeight="113.0" prefWidth="137.0" text="Adding/Changing" />
-      <Button fx:id="btn_academic_programs" layoutX="414.0" layoutY="155.0" mnemonicParsing="false" prefHeight="113.0" prefWidth="137.0" text="Programs" />
-      <Button fx:id="btn_section" layoutX="103.0" layoutY="296.0" mnemonicParsing="false" prefHeight="113.0" prefWidth="137.0" text="Section" />
-      <Button fx:id="btn_faculty" layoutX="414.0" layoutY="296.0" mnemonicParsing="false" prefHeight="113.0" prefWidth="137.0" text="Faculty" />
+      <Button fx:id="btn_evaluation" layoutX="26.0" layoutY="82.0" mnemonicParsing="false" prefHeight="113.0" prefWidth="137.0" text="Evaluation" />
+      <Button fx:id="btn_adding" layoutX="172.0" layoutY="82.0" mnemonicParsing="false" prefHeight="113.0" prefWidth="137.0" text="Adding/Changing" />
+      <Button fx:id="btn_academic_programs" layoutX="132.0" layoutY="269.0" mnemonicParsing="false" prefHeight="78.0" prefWidth="94.0" text="Programs" />
+      <Button fx:id="btn_section" layoutX="26.0" layoutY="269.0" mnemonicParsing="false" prefHeight="78.0" prefWidth="94.0" text="Section" />
+      <Button fx:id="btn_faculty" layoutX="234.0" layoutY="269.0" mnemonicParsing="false" prefHeight="78.0" prefWidth="94.0" text="Faculty" />
+      <Label layoutX="34.0" layoutY="32.0" text="Main Features" />
+      <Label layoutX="34.0" layoutY="220.0" text="Administration" />
+      <JFXButton layoutX="25.0" layoutY="355.0" prefHeight="78.0" prefWidth="94.0" style="-fx-border-color: #F491A6;" text="Student" />
+      <JFXButton layoutX="132.0" layoutY="355.0" prefHeight="78.0" prefWidth="94.0" style="-fx-border-color: #F491A6;" text="Access Controls" wrapText="true" />
+      <JFXButton layoutX="234.0" layoutY="355.0" prefHeight="78.0" prefWidth="94.0" style="-fx-border-color: #F491A6;" text="Semestral Calendar" wrapText="true" />
+      <JFXButton fx:id="btn_logout" layoutX="335.0" layoutY="100.0" prefHeight="78.0" prefWidth="94.0" style="-fx-border-color: #F491A6;" text="Logout" wrapText="true" />
    </children>
 </AnchorPane>
