--- a/src/update2/org/cict/layout/curriculum/curriculum-info.fxml
+++ b/src/update2/org/cict/layout/curriculum/curriculum-info.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.CheckComboBox?>
 
-<VBox prefHeight="656.0" prefWidth="1322.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" prefHeight="656.0" prefWidth="1322.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="456.0" style="-fx-background-color: #619AF3;">
          <children>
