--- a/src/update3/org/cict/layout/sectionmain/win-section-view.fxml
+++ b/src/update3/org/cict/layout/sectionmain/win-section-view.fxml
@@ -82,7 +82,7 @@
          <children>
             <StackPane alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefWidth="450.0">
                <children>
-                  <VBox fx:id="vbox_single" maxHeight="1.7976931348623157E308" spacing="40.0">
+                  <VBox fx:id="vbox_single" maxHeight="1.7976931348623157E308" spacing="10.0">
                      <children>
                         <VBox prefWidth="663.0" spacing="20.0">
                            <children>
@@ -193,8 +193,13 @@
                                     </TextField>
                                  </children>
                               </HBox>
-                              <HBox alignment="CENTER_RIGHT">
+                              <HBox alignment="CENTER_RIGHT" spacing="20.0">
                                  <children>
+                                    <JFXButton fx:id="btn_delete_section" prefWidth="150.0" style="-fx-background-color: #F76C83; -fx-border-color: white;" text="Delete" textFill="WHITE">
+                                       <font>
+                                          <Font size="16.0" />
+                                       </font>
+                                    </JFXButton>
                                     <JFXButton fx:id="btn_save_changes" prefWidth="150.0" style="-fx-border-color: #FFFFFF;" text="Save" textFill="WHITE">
                                        <font>
                                           <Font size="16.0" />
@@ -212,6 +217,64 @@
                            <padding>
                               <Insets left="20.0" />
                            </padding>
+                        </VBox>
+                        <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0">
+                           <children>
+                              <HBox alignment="CENTER_LEFT" spacing="10.0">
+                                 <children>
+                                    <ImageView fitHeight="150.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../section_images/tip_50.png" />
+                                       </image>
+                                    </ImageView>
+                                    <Label text="What You Can Do ?" wrapText="true">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </HBox>
+                              <HBox spacing="10.0">
+                                 <children>
+                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../section_images/check.png" />
+                                       </image>
+                                       <HBox.margin>
+                                          <Insets top="5.0" />
+                                       </HBox.margin>
+                                    </ImageView>
+                                    <Label text="If you created the section by mistake or with incorrect details you can still modify it even there are students already enrolled to it" wrapText="true">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                                 <padding>
+                                    <Insets left="15.0" />
+                                 </padding>
+                              </HBox>
+                              <HBox spacing="10.0">
+                                 <children>
+                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../section_images/delete.png" />
+                                       </image>
+                                       <HBox.margin>
+                                          <Insets top="5.0" />
+                                       </HBox.margin>
+                                    </ImageView>
+                                    <Label text="You cannot delete the section if there are students already enrolled to it" wrapText="true">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                                 <padding>
+                                    <Insets left="15.0" />
+                                 </padding>
+                              </HBox>
+                           </children>
                         </VBox>
                      </children>
                   </VBox>
