ideas for academic calendar

--- a/src/update3/org/cict/termcalendar/AcademicTermHome.fxml
+++ b/src/update3/org/cict/termcalendar/AcademicTermHome.fxml
@@ -30,14 +30,14 @@
       </HBox>
       <HBox prefWidth="200.0" spacing="30.0">
          <children>
-            <Label fx:id="lbl_current_term" graphicTextGap="10.0" styleClass="metro-subtitle-1" text="AY 2016 - 2017 First Semester" textFill="WHITE">
+            <Label fx:id="lbl_current_term" graphicTextGap="10.0" styleClass="metro-subtitle-1" text="Manage Current Academic Term" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../section_images/calendar_white.png" />
+                        <Image url="@images/Info_50px_1.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -45,6 +45,227 @@
          </children>
          <padding>
             <Insets left="10.0" />
+         </padding>
+      </HBox>
+      <HBox>
+         <children>
+            <VBox maxWidth="-Infinity" prefHeight="474.0" prefWidth="660.0" spacing="10.0">
+               <children>
+                  <HBox prefWidth="200.0" spacing="30.0">
+                     <children>
+                        <Label fx:id="lbl_current_term1" graphicTextGap="20.0" text="Evaluation Transactions" textFill="WHITE">
+                           <font>
+                              <Font size="30.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/evaluation.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets left="10.0" />
+                     </padding>
+                  </HBox>
+                  <HBox prefWidth="200.0" spacing="30.0">
+                     <children>
+                        <Label fx:id="lbl_current_term11" graphicTextGap="10.0" text="Evaluation System Module is ONLINE" textFill="WHITE">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/Chevron%20Right_50px_1.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets left="45.0" />
+                     </padding>
+                  </HBox>
+                  <HBox alignment="CENTER" prefWidth="200.0" spacing="30.0">
+                     <children>
+                        <JFXButton prefWidth="200.0" style="-fx-border-color: #FFFFFF; -fx-background-color: #F791A6;" text="Turn Off" textFill="WHITE">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </JFXButton>
+                     </children>
+                     <padding>
+                        <Insets left="45.0" top="10.0" />
+                     </padding>
+                  </HBox>
+                  <HBox prefWidth="200.0" spacing="30.0">
+                     <children>
+                        <Label fx:id="lbl_current_term12" graphicTextGap="20.0" text="Adding/Changing Transactions" textFill="WHITE">
+                           <font>
+                              <Font size="30.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/changing.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets left="10.0" top="20.0" />
+                     </padding>
+                  </HBox>
+                  <HBox prefWidth="200.0" spacing="30.0">
+                     <children>
+                        <Label fx:id="lbl_current_term111" graphicTextGap="10.0" text="Adding/Changing System Module is OFFLINE" textFill="WHITE">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/Chevron%20Right_50px_1.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets left="45.0" />
+                     </padding>
+                  </HBox>
+                  <HBox alignment="CENTER" prefWidth="200.0" spacing="30.0">
+                     <children>
+                        <JFXButton prefWidth="200.0" style="-fx-border-color: #FFFFFF;" text="Turn On" textFill="WHITE">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </JFXButton>
+                     </children>
+                     <padding>
+                        <Insets left="45.0" top="10.0" />
+                     </padding>
+                  </HBox>
+                  <HBox prefWidth="200.0" spacing="30.0">
+                     <children>
+                        <Label fx:id="lbl_current_term121" graphicTextGap="20.0" text="Grade Encoding" textFill="WHITE">
+                           <font>
+                              <Font size="30.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/encode.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets left="10.0" top="20.0" />
+                     </padding>
+                  </HBox>
+                  <HBox prefWidth="200.0" spacing="30.0">
+                     <children>
+                        <Label fx:id="lbl_current_term1111" graphicTextGap="10.0" text="Grade Encoding System is OFFLINE" textFill="WHITE">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/Chevron%20Right_50px_1.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets left="45.0" />
+                     </padding>
+                  </HBox>
+                  <HBox alignment="CENTER" prefWidth="200.0" spacing="30.0">
+                     <children>
+                        <JFXButton prefWidth="200.0" style="-fx-border-color: #FFFFFF;" text="Turn On" textFill="WHITE">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </JFXButton>
+                     </children>
+                     <padding>
+                        <Insets left="45.0" top="10.0" />
+                     </padding>
+                  </HBox>
+               </children>
+            </VBox>
+            <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" style="-fx-border-color: #FFFFFF;" HBox.hgrow="ALWAYS">
+               <children>
+                  <HBox prefWidth="200.0" spacing="30.0">
+                     <children>
+                        <Label fx:id="lbl_current_term13" graphicTextGap="20.0" text="Current Academic Term" textFill="WHITE">
+                           <font>
+                              <Font size="30.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/evaluation.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets left="10.0" />
+                     </padding>
+                  </HBox>
+                  <HBox prefWidth="200.0" spacing="30.0">
+                     <children>
+                        <Label fx:id="lbl_current_term112" graphicTextGap="10.0" text="A.Y. 2016 - 2017 First Semester" textFill="WHITE">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/Chevron%20Right_50px_1.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets left="45.0" />
+                     </padding>
+                  </HBox>
+                  <HBox alignment="CENTER" prefWidth="200.0" spacing="30.0">
+                     <children>
+                        <JFXButton prefWidth="200.0" style="-fx-border-color: #FFFFFF;" text="Change Academic Term" textFill="WHITE">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </JFXButton>
+                     </children>
+                     <padding>
+                        <Insets left="45.0" top="10.0" />
+                     </padding>
+                  </HBox>
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <HBox.margin>
+                  <Insets right="20.0" />
+               </HBox.margin>
+            </VBox>
+         </children>
+         <padding>
+            <Insets top="30.0" />
          </padding>
       </HBox>
    </children>
