--- a/src/update3/org/cict/termcalendar/AcademicTermHome.fxml
+++ b/src/update3/org/cict/termcalendar/AcademicTermHome.fxml
@@ -203,7 +203,7 @@
                   </HBox>
                </children>
             </VBox>
-            <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" style="-fx-border-color: #FFFFFF;" HBox.hgrow="ALWAYS">
+            <VBox prefWidth="100.0" spacing="10.0" style="-fx-border-color: #FFFFFF;" HBox.hgrow="ALWAYS">
                <children>
                   <HBox prefWidth="200.0" spacing="30.0">
                      <children>
@@ -243,12 +243,130 @@
                         <Insets left="45.0" />
                      </padding>
                   </HBox>
-                  <HBox alignment="CENTER" prefWidth="200.0" spacing="30.0">
+                  <HBox prefWidth="200.0" spacing="30.0">
                      <children>
-                        <JFXButton prefWidth="200.0" style="-fx-border-color: #FFFFFF;" text="Change Academic Term" textFill="WHITE">
+                        <Label fx:id="lbl_current_term131" graphicTextGap="20.0" text="Changing Academic Term" textFill="WHITE">
+                           <font>
+                              <Font size="25.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/Light%20On_50px.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets left="10.0" top="10.0" />
+                     </padding>
+                  </HBox>
+                  <HBox prefWidth="200.0" spacing="15.0">
+                     <children>
+                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@images/Next%20page_50px.png" />
+                           </image>
+                           <HBox.margin>
+                              <Insets top="5.0" />
+                           </HBox.margin>
+                        </ImageView>
+                        <Label fx:id="lbl_current_term1121" graphicTextGap="10.0" text="Changing Academic Term requires Two Factor Authorization." textFill="WHITE" wrapText="true">
                            <font>
                               <Font size="15.0" />
                            </font>
+                           <padding>
+                              <Insets top="5.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets left="45.0" />
+                     </padding>
+                  </HBox>
+                  <HBox prefWidth="200.0" spacing="15.0">
+                     <children>
+                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@images/Next%20page_50px.png" />
+                           </image>
+                           <HBox.margin>
+                              <Insets top="5.0" />
+                           </HBox.margin>
+                        </ImageView>
+                        <Label fx:id="lbl_current_term11211" graphicTextGap="10.0" text="Only the System Administrator can initiate a change in the current academic calendar." textFill="WHITE" wrapText="true">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                           <padding>
+                              <Insets top="5.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets left="45.0" />
+                     </padding>
+                  </HBox>
+                  <HBox prefWidth="200.0" spacing="15.0">
+                     <children>
+                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@images/Next%20page_50px.png" />
+                           </image>
+                           <HBox.margin>
+                              <Insets top="5.0" />
+                           </HBox.margin>
+                        </ImageView>
+                        <Label fx:id="lbl_current_term112111" graphicTextGap="10.0" text="The Local Registrar should confirm and agree in this calendar shifting, once accepted the system will shift into the new academic term leaving all the previous data in the archive." textFill="WHITE" wrapText="true">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                           <padding>
+                              <Insets top="5.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets left="45.0" />
+                     </padding>
+                  </HBox>
+                  <HBox prefWidth="200.0" spacing="15.0">
+                     <children>
+                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@images/Next%20page_50px.png" />
+                           </image>
+                           <HBox.margin>
+                              <Insets top="5.0" />
+                           </HBox.margin>
+                        </ImageView>
+                        <Label fx:id="lbl_current_term1121111" graphicTextGap="10.0" text="Once the academic term has been changed you cannot revert the following changes." textFill="WHITE" wrapText="true">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                           <padding>
+                              <Insets top="5.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets left="45.0" />
+                     </padding>
+                  </HBox>
+                  <HBox alignment="CENTER" prefWidth="200.0" spacing="15.0">
+                     <children>
+                        <JFXButton style="-fx-border-color: #FFFFFF;" text="Change Academic Term" textFill="WHITE">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/Warning%20Shield_50px_1.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
                         </JFXButton>
                      </children>
                      <padding>
@@ -257,7 +375,7 @@
                   </HBox>
                </children>
                <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                </padding>
                <HBox.margin>
                   <Insets right="20.0" />
